// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page component should match snapshot 1`] = `
<Fragment>
  <main>
    <Component
      selectedPage="mocked-page"
    />
    <div
      id="page-content"
    />
  </main>
  <Component />
</Fragment>
`;

exports[`Page component should match snapshot with children 1`] = `
<Fragment>
  <main>
    <Component
      selectedPage="mocked-page"
    />
    <div
      id="page-content"
    >
      <div>
        Children test component
      </div>
    </div>
  </main>
  <Component />
</Fragment>
`;
